--- a/KamleonApp/app/src/main/res/layout/activity_home.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_home.xml
@@ -40,7 +40,7 @@
                 app:srcCompat="@drawable/kamleon"
                 android:background="@color/transparent"
                 android:scaleType="fitStart"
-                android:layout_marginStart="@dimen/margin_horizontal_header"
+                android:layout_marginStart="18dp"
                 android:layout_marginTop="@dimen/margin_top_header"
                 android:layout_marginBottom="@dimen/margin_bottom_header"
                 android:importantForAccessibility="no" />
@@ -83,7 +83,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
             app:layout_constraintStart_toStartOf="parent"
-            android:paddingHorizontal="28dp"
+            android:paddingHorizontal="26dp"
             android:layout_marginTop="@dimen/nav_back_button_top"
             android:id="@+id/tv_home_last_sample"
             android:textAllCaps="true"
@@ -97,7 +97,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/tv_home_last_sample"
             app:layout_constraintStart_toStartOf="parent"
-            android:paddingHorizontal="28dp"
+            android:paddingHorizontal="26dp"
             android:layout_marginTop="2dp"
             android:id="@+id/tv_home_message"
             tools:text="Hydrated"
