--- a/KamleonApp/app/src/main/res/layout/activity_pwd.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_pwd.xml
@@ -52,9 +52,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/CircularBoldFont"
             android:layout_marginTop="16dp"
             android:textColor="@color/text_color_category"
+            android:textAppearance="@style/TextAppearance.Kamleon.Bold"
             android:text="@string/pwd_title"
             android:textSize="@dimen/ts_14"/>
 
@@ -82,9 +82,9 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        style="@style/CircularBoldFont"
                         android:textColor="@color/kamleon_dark_grey"
                         android:text="@string/pwd_password"
+                        android:textAppearance="@style/TextAppearance.Kamleon.Bold"
                         android:textSize="@dimen/ts_14"/>
                     <EditText
                         android:layout_width="0dp"
@@ -129,9 +129,9 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        style="@style/CircularBoldFont"
                         android:textColor="@color/kamleon_dark_grey"
                         android:text="@string/pwd_new"
+                        android:textAppearance="@style/TextAppearance.Kamleon.Bold"
                         android:textSize="@dimen/ts_14"/>
                     <EditText
                         android:layout_width="0dp"
@@ -170,9 +170,9 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        style="@style/CircularBoldFont"
                         android:textColor="@color/kamleon_dark_grey"
                         android:text="@string/pwd_confirm"
+                        android:textAppearance="@style/TextAppearance.Kamleon.Bold"
                         android:textSize="@dimen/ts_14"/>
                     <EditText
                         android:layout_width="0dp"
