--- a/KamleonApp/app/src/main/res/layout/fragment_image_pick.xml
+++ b/KamleonApp/app/src/main/res/layout/fragment_image_pick.xml
@@ -19,13 +19,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/img_bottom_sheet_line"/>
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            android:id="@+id/imageProfile"
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="100dp"
             android:layout_margin="10dp"
-            android:src="@drawable/image_profile"/>
+            android:id="@+id/cv_settings_pick_profile"
+            android:elevation="8dp"
+            app:cardBackgroundColor="?attr/colorSurface">
+            <TextView
+                android:id="@+id/tv_settings_pick_profile_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/default_value"
+                android:textAppearance="@style/TextAppearance.Kamleon.Headline5"
+                android:textColor="@color/kamleon_secondary_grey_60"
+                android:layout_gravity="center"/>
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="96dp"
+                android:layout_height="96dp"
+                android:id="@+id/iv_settings_pick_profile_image"
+                android:visibility="invisible"/>
+        </androidx.cardview.widget.CardView>
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
