--- a/KamleonApp/app/src/main/res/layout/layout_kmln_header.xml
+++ b/KamleonApp/app/src/main/res/layout/layout_kmln_header.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:paddingBottom="10dp"
     android:orientation="vertical">
 
@@ -54,14 +55,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textViewAvgValue"
-                android:text="45"
+                tools:text="45"
                 android:textColor="@color/kmln_graph_color_black"
                 android:textSize="@dimen/kmln_graph_header_average_value_text_size"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="%"
+                android:text="@string/unit_percentage"
                 android:id="@+id/textViewAvgUnit"
                 android:textColor="@color/kmln_graph_color_black"
                 android:textSize="@dimen/kmln_graph_header_average_percent_text_size"/>
