--- a/KamleonApp/app/src/main/res/layout/layout_setting_menu_item.xml
+++ b/KamleonApp/app/src/main/res/layout/layout_setting_menu_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -30,7 +31,7 @@
         android:id="@+id/tvValue"
         android:textSize="@dimen/ts_14"
         android:textAppearance="@style/TextAppearance.Kamleon.Book"
-        android:text="value"
+        tools:text="value"
         android:textColor="@color/kamleon_secondary_grey_70"/>
 
     <androidx.appcompat.widget.SwitchCompat
@@ -41,8 +42,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        tools:checked="false"
         app:track="@drawable/switch_track"
-        android:thumb="@drawable/switch_thumb" />
+        android:thumb="@drawable/switch_thumb"
+        app:showText="false"
+        />
 
     <ImageView
         android:layout_width="wrap_content"
