--- a/KamleonApp/app/src/main/res/drawable/switch_thumb_false.xml
+++ b/KamleonApp/app/src/main/res/drawable/switch_thumb_false.xml
@@ -6,19 +6,23 @@
         android:bottom="4sp"
         android:left="2sp"
         >
-        <shape android:shape="oval">
-            <solid android:color="@color/kamleon_blue"/>
-            <size android:height="14dp"
+        <shape
+            android:shape="oval">
+            <solid android:color="@color/blue"/>
+            <size
+                android:height="14dp"
                 android:width="14dp"/>
 
         </shape>
     </item>
 
-<!--    <item android:drawable="@drawable/ic_notifications_off"-->
-<!--        android:bottom="12dp"-->
-<!--        android:top="12dp"-->
-<!--        android:left="12dp"-->
-<!--        android:right="12dp"-->
-<!--        />-->
+<!--
+&lt;!&ndash;    <item android:drawable="@drawable/ic_notifications_off"&ndash;&gt;
+&lt;!&ndash;        android:bottom="12dp"&ndash;&gt;
+&lt;!&ndash;        android:top="12dp"&ndash;&gt;
+&lt;!&ndash;        android:left="12dp"&ndash;&gt;
+&lt;!&ndash;        android:right="12dp"&ndash;&gt;
+&lt;!&ndash;        />&ndash;&gt;
+-->
 
 </layer-list>
