--- a/KamleonApp/app/src/main/res/drawable/switch_thumb_true.xml
+++ b/KamleonApp/app/src/main/res/drawable/switch_thumb_true.xml
@@ -1,29 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:top="4sp"
         android:bottom="4sp"
         android:right="2sp"
         >
-        <shape android:shape="oval">
-            <solid android:color="@color/white"/>
-            <size android:height="14dp"
+        <shape
+            android:shape="oval">
+            <solid android:color="@color/color_red"/>
+            <size
+                android:height="14dp"
                 android:width="14dp"/>
 <!--            <stroke android:width="1sp"-->
 <!--                android:color="#8e8e8e"-->
 <!--                />-->
 
         </shape>
+
     </item>
+    <!--
 
-
-<!--    <item android:drawable="@drawable/ic_notification_on"-->
-<!--        android:bottom="12dp"-->
-<!--        android:top="12dp"-->
-<!--        android:left="12dp"-->
-<!--        android:right="12dp"-->
-<!--        />-->
-
+    &lt;!&ndash;    <item android:drawable="@drawable/ic_notification_on"&ndash;&gt;
+    &lt;!&ndash;        android:bottom="12dp"&ndash;&gt;
+    &lt;!&ndash;        android:top="12dp"&ndash;&gt;
+    &lt;!&ndash;        android:left="12dp"&ndash;&gt;
+    &lt;!&ndash;        android:right="12dp"&ndash;&gt;
+    &lt;!&ndash;        />&ndash;&gt;
+-->
 
 </layer-list>
