--- a/KamleonApp/app/src/main/res/color/switch_track_ios_color.xml
+++ b/KamleonApp/app/src/main/res/color/switch_track_ios_color.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:state_checked="false"
-        android:drawable="@drawable/switch_thumb_false"/>
-
     <item android:state_checked="true"
-        android:drawable="@drawable/switch_thumb_true"/>
-
+        android:color="@color/kamleon_blue"/> <!-- pressed -->
+    <item android:color="@color/kamleon_secondary_grey_40"/> <!-- default -->
 </selector>
