--- a/KamleonApp/app/src/main/res/layout/layout_setting_menu_item.xml
+++ b/KamleonApp/app/src/main/res/layout/layout_setting_menu_item.xml
@@ -34,19 +34,29 @@
         tools:text="value"
         android:textColor="@color/kamleon_secondary_grey_70"/>
 
-    <androidx.appcompat.widget.SwitchCompat
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+    <com.google.android.material.materialswitch.MaterialSwitch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:scaleX="0.7"
+        android:scaleY="0.7"
+        android:layout_marginEnd="-8dp"
         android:id="@+id/settingItemSwitch"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:checked="false"
-        app:track="@drawable/switch_track"
-        android:thumb="@drawable/switch_thumb"
-        app:showText="false"
+        tools:checked="true"
+        android:thumb="@drawable/thumb_new"
+        app:trackTint="@color/switch_track_ios_color"
+        app:thumbTint="@color/switch_thumb_ios_color"
+        app:trackDecorationTint="@color/transparent"
+        android:textOn=""
+        android:textOff=""
         />
+    </LinearLayout>
 
     <ImageView
         android:layout_width="wrap_content"
